--- a/component/template.hbs
+++ b/component/template.hbs
@@ -1,35 +1,98 @@
 <section class="horizontal-form">
-  <div class="container-fluid">
-    {{!-- This partial contains the quantity, name, and description fields --}}
-    {{partial "host/add-common"}}
+    <div class="container-fluid">
+        {{!-- This partial contains the quantity, name, and description fields --}}
+        {{partial "host/add-common"}}
 
-    <div class="over-hr r-mt20 r-mb20">
-      <span>My Skeleton Driver</span>
-    </div>
-
-    {{!-- An example input option --}}
-    <div class="row">
-      <div class="col-sm-12 col-md-2 form-label">
-        <label class="form-control-static">Size</label>
-      </div>
-      <div class="col-sm-12 col-md-4">
-        <div class="input-group">
-          {{input type="text"
-            class="form-control"
-            value=model.%%DRIVERNAME%%Config.size
-          }}
-          <span class="input-group-addon">MB</span>
+        <div class="over-hr r-mt20 r-mb20">
+            <span>Aliyun Api Info</span>
         </div>
-      </div>
+
+        {{!-- An example input option --}}
+        <div class="row form-group">
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">Access Key*</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                    {{input type="text"
+                    class="form-control"
+                    value=config.accessKeyId
+                    }}
+            </div>
+
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">Access Key Secret*</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                    {{input type="password"
+                    class="form-control"
+                    value=config.accessKeySecret
+                    }}
+            </div>
+        </div>
+
+        <div class="over-hr r-mt20 r-mb20">
+            <span>Instance Info</span>
+        </div>
+
+        <div class="row form-group">
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">Region</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                {{input type="text"
+                class="form-control"
+                value=config.region
+                }}
+            </div>
+        </div>
+
+        <div class="row form-group">
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">IP Address</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                {{input type="text"
+                class="form-control"
+                value=config.ipAddress
+                }}
+            </div>
+        </div>
+
+        <div class="row form-group">
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">SSH Password</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                {{input type="password"
+                class="form-control"
+                value=config.sshPassword
+                }}
+            </div>
+        </div>
+
+        <div class="over-hr r-mt20 r-mb20">
+            <span>Other options</span>
+        </div>
+        <div class="row form-group">
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">Upgrade kernel to 4.x</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                {{input type="checkbox"
+                class="form-control"
+                checked=config.upgradeKernel
+                value=config.upgradeKernel
+                }}
+            </div>
+        </div>
+
+        {{!-- This partial contains the Labels and Advanced Options fields --}}
+        {{partial "host/add-options"}}
     </div>
 
-    {{!-- This partial contains the Labels and Advanced Options fields --}}
-    {{partial "host/add-options"}}
-  </div>
+    {{!-- This component shows errors produced by validate() in the component --}}
+    {{top-errors errors=errors}}
 
-  {{!-- This component shows errors produced by validate() in the component --}}
-  {{top-errors errors=errors}}
-
-  {{!-- This component shows the Create and Cancel buttons --}}
-  {{save-cancel save="save" cancel="cancel"}}
+    {{!-- This component shows the Create and Cancel buttons --}}
+    {{save-cancel save="save" cancel="cancel"}}
 </section>
