--- a/component/template.hbs
+++ b/component/template.hbs
@@ -85,6 +85,18 @@
                 }}
             </div>
         </div>
+        <div class="row form-group">
+            <div class="col-sm-12 col-md-2 form-label">
+                <label class="form-control-static">Auto format external disk</label>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                {{input type="checkbox"
+                class="form-control"
+                checked=config.autoFormatDisk
+                value=config.autoFormatDisk
+                }}
+            </div>
+        </div>
 
         {{!-- This partial contains the Labels and Advanced Options fields --}}
         {{partial "host/add-options"}}
